# s3backer

./: Makefile.am  auth_conf.h  auto_testConfig  auto_testSuite.sh  block_cache.c  block_cache.h  block_device.c  block_device.h  block_part.c  block_part.h  cb_http_io.c  cb_http_io.h  cleanup.sh  cloudbacker.1  cloudbacker.h  cloudbacker.spec.in  cloudbacker_config.c  cloudbacker_config.h  configure.ac  dcache.c  dcache.h  ec_protect.c  ec_protect.h  erase.c  erase.h  fuse_ops.c  fuse_ops.h  gsb_http_io.c  gsb_http_io.h  hash.c  hash.h  http_gio.c  http_gio.h  http_io.c  localStore_io.c  localStore_io.h  main.c  reset.c  reset.h  s3b_config.c  (+7 more)
Testing_GCS/: cloud_write_read.sh  cloud_write_read_nameHash.sh  cloud_write_read_prefix.sh  dummy.sh  local_rw_someblocks.sh  local_rw_someblocks_compress1.sh  local_rw_someblocks_compress5.sh  local_write_read.sh  local_write_read_prefix.sh  readFromlocal.txt  readFromlocalcloud.txt  readpartialBlock.txt
Testing_S3/: cloud_write_read.sh  cloud_write_read_nameHash.sh  cloud_write_read_prefix.sh  dummy.sh  local_rw_someblocks.sh  local_rw_someblocks_compress1.sh  local_rw_someblocks_compress5.sh  local_write_read.sh  local_write_read_prefix.sh  wrtTolcl5_rdFrmcld10.txt
